# music-generation

./: .gitignore  README.md  new.txt  phases.md  prompt.md  pyproject.toml  pytest.ini  test.py
data/reports/: dataset_analysis.md  dataset_cleaning_report.json  dataset_summary.json  genre_instrument_statistics.csv  genre_statistics.csv  instrument_statistics.csv  midi_duration_statistics.json
scripts/: analyze_genres.py  analyze_midi_durations.py  analyze_tags.py  run_dataset_cleaner.py  run_dataset_statistics.py  run_genre_metadata_extraction.py  run_instrument_family_extraction.py  run_metadata_extraction.py  run_midi_validator.py  scan_dataset.py
src/configs/dataset/: common_config.py  dataset_cleaner_config.py  dataset_statistics_config.py  genre_metadata_extractor_config.py  instrument_family_extractor_config.py  metadata_extractor_config.py
src/music_generation/data/: dataset_cleaner.py  dataset_loader.py  dataset_statistics.py  genre_metadata_extractor.py  instrument_family_extractor.py  metadata_extractor.py  midi_validator.py
src/music_generation/utils/: utils.py
tests/data/: test_dataset_cleaner.py  test_dataset_loader.py  test_dataset_statistics.py  test_genre_metadata_extractor.py  test_instrument_family_extractor.py  test_metadata_extractor.py  test_midi_validator.py
