[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-generation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pretty-midi>=0.2.11",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
